# bitbox_V1.0

./: HOW_TO_BITBOX.md  LICENSE  README.md
.github/workflows/: build.yml
firmware/fw_bitbox_v1/: README.md  partitions.csv  sdkconfig  sdkconfig.old
firmware/fw_bitbox_v1/components/embled/: CMakeLists.txt  embled.c  embled_app.c
firmware/fw_bitbox_v1/components/gpio_periph/: CMakeLists.txt  gpio_periph.c  gpio_peripheral.c
firmware/fw_bitbox_v1/components/mqtt_app/: CMakeLists.txt  mqtt_app.c
firmware/fw_bitbox_v1/components/sd_log/: sd_log.c
firmware/fw_bitbox_v1/components/sdmmc_storage/: sdmmc_storage.c
firmware/fw_bitbox_v1/components/uart_periph/: CMakeLists.txt  uart_periph.c
firmware/fw_bitbox_v1/main/: CMakeLists.txt  app_config.c  idf_component.yml  main_app.c
firmware/fw_bitbox_v1/main/include/: app_config.h  main_app.h
hardware/: LICENSE  README.md
software/: log_filler.py  sigrok_gen.py
software/device_config/: data_logger_config.yaml  publish_config.py
software/logs/: log_decoder_bin.py  log_decoder_txt_gpio.py  log_decoder_txt_uart.py  log_filler.py  log_processor.py
software/logs/LOG2_FOLDER/: uart0.txt
software/logs/decoded/: gpio4.txt  gpio5.txt  uart0.txt  uart2.txt
software/logs/log12_folder/: gpio34.txt  gpio35.txt  gpio37.txt
software/mqtt/: at_loop.sh  mqtt_config_gpio.py  mqtt_config_uart.py  mqtt_monitor.py  mqtt_remote_cmd.py
software/mqtt/logs/: datalogger_gpio_2.txt  datalogger_gpio_3.txt  datalogger_gpio_35.txt  datalogger_gpio_5.txt  datalogger_uart_2.txt
(+10 files in other folders)
